@@ -3,3 +3,5 @@ add_library( nav STATIC
     nav_Frequency.cpp
     nav_Manager.cpp
 )
+
+qt5_use_modules( nav Xml )
